fixing the overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+html,
+body {
+  overflow-x: hidden !important;
+}
+
 .perspective {
   perspective: 1000px;
 }
